--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
+*{
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Oswald';
+}
+body{
+    background: rgb(39 43 51);
+  height: auto;
+}
 .App {
   text-align: center;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.ContainerGeneral{
+  margin-top: 5%;
+  margin-bottom: 0%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.botonesparapaginas{
+  margin-bottom: 1%;
+  color: #F0F2EB;
+}
+.buttonpage{
+  background-color:#208D45 ;
+  color:#F0F2EB ;
+  border-radius: 5px;
+  font-size: larger;
+  margin: 10px;
+  transition: 0.1s;
+  border: none;
+}
+.buttonpage:hover{
+  background-color:#A7CB54 ;
+  color:#F0F2EB ;
+  border-radius: 5px;
+  font-size: larger;
+  filter: drop-shadow(0px 0px 10px #a7cb5493);
+  margin: 10px;
+  scale:1.2;
+}
+.buscar{
+  background-color: #A7CB54;
+  border: 1px solid #ffffff9c;
+  filter: drop-shadow(0px 0px 10px #a7cb5493);
+  color: #F0F2EB;
+  font-size: medium;
+  border-radius: 5px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 1%;
+}
+.buscar::placeholder{
   color: white;
+  animation: alternate;
+  text-align: center;
 }
-
-.App-link {
-  color: #61dafb;
+.assidee{
+  position: fixed;
+  padding: 5%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Passide{
+  display: flex;
+  align-items: center;
+  font-size: large;
+  text-transform: uppercase;
+  font-weight: lighter;
+  color: #F0F2EB;
+  background: none;
+  border: none;
+}
+.Passide:hover{
+  color: rgb(255, 152, 0);
 }
